<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_3sdp"
    android:id="@+id/cl_meetingfrag"
    android:background="@color/charte_bone"
    android:padding="@dimen/_5sdp">

    <ImageView
        android:id="@+id/iv_meetingfrag_logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_meetingfrag_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_7sdp"/>


    <TextView
        android:id="@+id/tv_meetingfrag_heading"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:textSize="@dimen/_13sdp"
        android:gravity="start"
        android:padding="@dimen/_2sdp"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/iv_meetingfrag_delete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_meetingfrag_logo"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_meetingfrag_email"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@id/tv_meetingfrag_heading"
        android:layout_toEndOf="@id/iv_meetingfrag_logo"
        android:gravity="start"
        android:padding="@dimen/_2sdp"
        android:text="@string/mail"
        android:textSize="@dimen/_9sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_meetingfrag_delete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_meetingfrag_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_meetingfrag_heading"
        android:maxLines="1"
        android:isScrollContainer="true"/>


    <ImageView
        android:id="@+id/iv_meetingfrag_delete"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignBottom="@id/iv_meetingfrag_logo"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_meetingfrag_heading"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/trash" />

</androidx.constraintlayout.widget.ConstraintLayout>